src/objects/cb5__CBRevision__c.object
<CustomObject>
    <fields>
        <fullName>cb5__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>R-{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Parent__c</fullName>
        <label>Parent</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CB Revision</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>